# Online-election-system

./: .env  .gitignore  CMakeLists.txt  changelog.sql
include/: crudOperations.h  votingSystem.h
include/entities/: User.cpp  User.h
src/: main.cpp  votingSystem.cpp
src/DatabaseManagements/: crudOperations.cpp
